[project]
name = "hubris"
version = "0.2.2"
description = "Helpful Utility to Bring Reporting Into Spreadsheets"
authors = [
    {name = "Steve Holden",email = "steve@holdenweb.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)"
]
packages = [
    { include = "hubris", from = "src" },
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
